tdf#119138 Show custom chart title if autoTitleDeleted is missing

autoTitleDeleted might be omitted by generators other than Excel
while providing custom title. mbAutoTitleDel is set only based on the attribute value
and the default also varies on whether MSO 2007 or newer is the generator, see tdf#78080

ECMA-376 Part 1 at 21.2.2.7 says:
A value of 1 or true specifies that the property is applied.
This is the default value for this attribute, and is implied
when the parent element is present, but this attribute is omitted.

Change-Id: If3457fe850e13ae8af207bb9beceecc9e887b797